--- a/.env.example
+++ b/.env.example
@@ -1,34 +1,46 @@
-# Carbon Intensity API Configuration
-CARBON_API_PROVIDER=electricitymap  # Options: watttime, electricitymap
-
-# WattTime API (if using WattTime)
-WATTTIME_USERNAME=chrisklein0802
-WATTTIME_PASSWORD=your_password_here
-
-# ElectricityMap API (if using ElectricityMap)
-ELECTRICITYMAP_API_KEY=03HG77XbClo5oNlHn9ac
+# Carbon-Aware FinOps Environment Variables
+# Copy this file to .env and fill in your actual values
 
 # AWS Configuration
+AWS_PROFILE=carbon-finops-sandbox
 AWS_REGION=eu-central-1
-AWS_PROFILE=default
-AWS_ACCOUNT_ID=273146546541
-
-# Project Configuration
-PROJECT_NAME=carbon-aware-finops
 ENVIRONMENT=development
 
-# Scheduling Configuration
-SCHEDULE_CHECK_INTERVAL=15  # minutes
-CARBON_THRESHOLD=400  # gCO2/kWh
+# API Keys (Optional - can also be stored in AWS Secrets Manager)
+# ElectricityMap API Key for detailed carbon intensity data
+ELECTRICITYMAP_API_KEY=your_electricitymap_api_key_here
 
-# Notification Configuration
-NOTIFICATION_EMAIL=ch.klein@reply.de
-SLACK_WEBHOOK_URL=
+# WattTime API Credentials (alternative carbon data source)
+WATTTIME_USERNAME=your_watttime_username_here
+WATTTIME_PASSWORD=your_watttime_password_here
 
-# Logging
+# Dashboard Configuration
+DASHBOARD_SECRET_KEY=your_secure_random_secret_key_here
+DASHBOARD_HOST=127.0.0.1
+DASHBOARD_PORT=8050
+DASHBOARD_DEBUG=true
+
+# Logging Configuration
 LOG_LEVEL=INFO
 LOG_FILE=logs/carbon-finops.log
 
-# Cost Optimization Targets
-TARGET_COST_REDUCTION=20  # percentage
-TARGET_CARBON_REDUCTION=25  # percentage
+# Terraform Configuration (optional overrides)
+TF_VAR_aws_region=eu-central-1
+TF_VAR_aws_profile=carbon-finops-sandbox
+TF_VAR_project_name=carbon-aware-finops
+TF_VAR_environment=development
+TF_VAR_instance_type=t3.micro
+TF_VAR_test_instance_count=3
+
+# Carbon Intensity Thresholds (gCO2/kWh) - optional overrides
+CARBON_THRESHOLD_EU_CENTRAL_1=300
+CARBON_THRESHOLD_EU_WEST_1=250
+CARBON_THRESHOLD_EU_WEST_2=200
+CARBON_THRESHOLD_EU_WEST_3=90
+CARBON_THRESHOLD_EU_NORTH_1=40
+CARBON_THRESHOLD_US_EAST_1=450
+CARBON_THRESHOLD_US_WEST_2=350
+
+# Application Settings
+PROJECT_NAME=carbon-aware-finops
+PYTHONPATH=./src
