Complete Repository Optimization Summary
  ✅ Issues Fixed & Files Cleaned

  1. Code Quality Issues

  - ✅ Fixed all logger warnings in shutdown_scheduler.py and realtime_dashboard.py
  - ✅ Removed unused imports (boto3 in scheduler, unused parameters)
  - ✅ All diagnostic warnings cleared - zero remaining issues

  2. Redundant/Obsolete Files Removed

  - ❌ setup.py - Removed (referenced deleted CLI module)
  - ❌ config/aws_config.yaml - Removed (duplicated centralized settings)
  - ✅ Cleaned up German comments in Terraform and YAML files

  3. Missing Essential Files Added

  - ✅ requirements.txt - Production dependencies
  - ✅ .gitignore - Comprehensive Python/AWS/Terraform gitignore
  - ✅ .env.example - Environment variables template

  4. Makefile Consolidation

  - ✅ Merged functionality from infrastructure/terraform/Makefile into main Makefile
  - ✅ Added 15+ new commands including:
    - Lambda management (enable-schedules, test-lambda-scheduler)
    - Advanced infrastructure deployment (deploy-core, deploy-instances)
    - Enhanced monitoring (logs-scheduler, cost-estimate)
    - Project optimization (optimize)

--- a/config/scheduling_rules.yaml
+++ b/config/scheduling_rules.yaml
@@ -4,7 +4,7 @@ always-on:
   shutdown_time: null
   startup_time: null
   days: []
-  carbon_threshold: null  # Keine Einschränkungen
+  carbon_threshold: null  # No restrictions
   timezone: "Europe/Berlin"
 
 office-hours-weekdays:
@@ -20,7 +20,7 @@ development-extended:
   shutdown_time: "20:00"
   startup_time: "07:00"
   days: ["monday", "tuesday", "wednesday", "thursday", "friday"]
-  carbon_threshold: 500  # Optional: Carbon-Optimierung
+  carbon_threshold: 500  # Optional: Carbon optimization
   timezone: "Europe/Berlin"
 
 carbon-optimized:
@@ -28,5 +28,5 @@ carbon-optimized:
   shutdown_time: null
   startup_time: null
   days: []
-  carbon_threshold: 300  # Nur bei niedrigem CO2-Ausstoß
+  carbon_threshold: 300  # Only during low CO2 emissions
   timezone: "Europe/Berlin"
