--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
-### 2. .gitignore
-
-```gitignore
-# Python
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
+
+# C extensions
 *.so
+
+# Distribution / packaging
 .Python
 build/
 develop-eggs/
@@ -24,48 +25,136 @@ wheels/
 *.egg
 MANIFEST
 
-# Virtual Environment
+# PyInstaller
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+# celery beat schedule file
+celerybeat-schedule
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.venv
+env/
 venv/
 ENV/
-env/
+env.bak/
+venv.bak/
 
-# AWS
-.aws/
-*.pem
-*.ppk
+# Spyder project settings
+.spyderproject
+.spyproject
 
-# Terraform
-*.tfstate
-*.tfstate.*
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# AWS and Terraform
 .terraform/
 .terraform.lock.hcl
+terraform.tfstate*
+tfplan*
 *.tfvars
+!terraform.tfvars.example
 
-# Environment variables
-.env
-.env.local
-.env.*.local
+# Lambda deployment packages
+lambda_deployment.zip
+lambda_layer.zip
+build_tmp/
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
-
-# Data
-data/baseline/*.csv
-data/results/*.json
-data/reports/*.pdf
-
-# Logs
-*.log
-logs/
+*~
 
 # OS
 .DS_Store
 Thumbs.db
 
-# Credentials
-config/credentials.yaml
-*_secret.yaml
-.env.example
+# Application logs
+logs/
+*.log
+
+# Data directories (but keep structure)
+data/baseline/*
+!data/baseline/.gitkeep
+data/results/*
+!data/results/.gitkeep
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+
+# Secrets and keys
+secrets.yaml
+.secrets
+*.pem
+*.key
+
+# Dashboard assets
+dash_assets/
