1. pyproject.toml - Updated script entries to reference correct modules:     - Removed carbon-scheduler (deleted module)     - Updated carbon-dashboard to point to thesis_dashboard   2. VSCode launch.json - Updated debug configurations:     - Replaced old automation/realtime dashboard configs     - Added new thesis dashboard and lambda scheduler configs   3. Cleared Python cache - Removed __pycache__ and .pyc files   4. Verified all imports - All core modules now import correctly ✅

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,8 +39,7 @@ dev = [
 ]
 
 [project.scripts]
-carbon-scheduler = "src.automation.shutdown_scheduler:main"
-carbon-dashboard = "src.reporting.realtime_dashboard:main"
+carbon-dashboard = "src.reporting.thesis_dashboard:main"
 
 [tool.setuptools]
 packages = ["src"]
