--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,29 @@
-# Carbon-Aware FinOps - Production Dependencies
+# Carbon-Aware FinOps - Optimized Dependencies
 
 # AWS SDK
 boto3>=1.34.0
 botocore>=1.34.0
 
-# Data Processing
+# Data Processing (used in analytics & visualization)
 pandas>=2.1.0
 numpy>=1.24.0
-scipy>=1.11.0
 
 # Web Framework (Dashboard)
 dash>=2.14.0
 plotly>=5.17.0
 flask>=2.3.0
 
-# HTTP Requests
+# HTTP Requests (API calls)
 requests>=2.31.0
 
 # Configuration
-PyYAML>=6.0.1
 python-dotenv>=1.0.0
-
-# CLI Tools
-click>=8.1.0
 
 # Date/Time Handling
 python-dateutil>=2.8.0
 
-# Utilities
+# Type Extensions
 typing-extensions>=4.8.0
-dataclasses-json>=0.6.0
 
-# Monitoring and Logging
+# Monitoring and Logging (lightweight)
 structlog>=23.2.0
-loguru>=0.7.0
