1. Standardized Structure Across All Tabs:   - Header sections: All use section-header class   - Metrics cards: All use carbon-card and carbon-grid (like Carbon Analytics tab)   - Charts: All use chart-card and charts-grid   - Content sections: All use content-card, content-column, and content-grid
  2. Container Classes Harmonized:
  - Overview Tab: Updated analysis section to use unified content-grid system
  - Carbon Tab: Aligned analysis section with unified structure
  - Thesis Validation Tab: Fixed inconsistent modern-chart-wrapper wide → chart-card wide
  - Research Methods Tab: Converted methodology section to unified content-grid

  3. CSS Optimization:
  - Unified Grid System: Created consistent grid layouts across all components
  - Content Cards: Standardized padding, shadows, and hover effects
  - Responsive Design: Consistent breakpoints and spacing
  - Visual Hierarchy: Aligned typography and spacing

  4. Visual Improvements:
  - Metrics Icons: Reduced size (2.5rem → 2rem) and positioned beside text horizontally
  - Chart Titles: Reduced spacing (spacing-4 → spacing-2) to minimize gaps
  - Card Layout: All content now uses horizontal icon+text layout
  - Hover Effects: Consistent subtle animations across all cards

--- a/.gitignore
+++ b/.gitignore
@@ -218,3 +218,4 @@ htmlcov/
 
 # Keep VS Code config but ignore user-specific settings
 # .vscode/ - We want to keep the project VS Code settings
+.config/
