--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,27 @@
-# Carbon-Aware FinOps - Optimized Dependencies
+# Carbon-Aware FinOps - Essential Dependencies Only
+# =================================================
 
-# AWS SDK
+# Core Application Framework
+streamlit>=1.49.0
+
+# AWS Integration
 boto3>=1.34.0
-botocore>=1.34.0
 
-# Data Processing (used in analytics & visualization)
-pandas>=2.1.0
-numpy>=1.24.0
-
-# Web Framework (Dashboard)
-dash>=2.14.0
-plotly>=5.17.0
-flask>=2.3.0
-
-# HTTP Requests (API calls)
+# API Requests
 requests>=2.31.0
 
-# Configuration
+# Configuration Management
 python-dotenv>=1.0.0
 
-# Date/Time Handling
-python-dateutil>=2.8.0
+# Data Processing & Visualization
+pandas>=2.1.0
+numpy>=1.24.0
+plotly>=5.17.0
 
-# Type Extensions
-typing-extensions>=4.8.0
-
-# Monitoring and Logging (lightweight)
-structlog>=23.2.0
-
-# Testing Dependencies (Development)
+# Testing
 pytest>=7.4.0
-pytest-cov>=4.1.0
-pytest-mock>=3.11.0
-coverage>=7.3.0
+
+# Development Dependencies (optional)
+# Uncomment if needed for development:
+# black>=22.0
+# flake8>=4.0
