-- Created completly new structure

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@
 
 # AWS Configuration
 # Configure via: aws configure sso --profile your-profile-name
+# If SSO token expires, run: aws sso login --profile your-profile-name
 AWS_PROFILE=your-aws-profile-name
 
 # ElectricityMap API Key
@@ -12,8 +13,15 @@ AWS_PROFILE=your-aws-profile-name
 ELECTRICITYMAP_API_KEY=your_electricitymap_api_key_here
 
 # ======================================================
-# Notes:
-# - AWS_PROFILE: Must match your AWS CLI profile name
-# - ElectricityMap: Free tier available, covers German grid data
-# - No fallbacks: Missing keys result in 0 values (Bachelor thesis policy)
+# Setup Instructions:
+# 1. Copy this file to .env: cp .env.example .env
+# 2. Configure AWS SSO: aws configure sso --profile your-profile-name
+# 3. Login to AWS: aws sso login --profile your-profile-name
+# 4. Get ElectricityMap key: https://app.electricitymap.org/map
+# 5. Run validation: make validate
+#
+# Troubleshooting:
+# - "Token expired": Run aws sso login --profile your-profile-name
+# - "Profile not found": Check aws configure list-profiles
+# - Missing .env: Validation will use system environment variables
 # ======================================================
