--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,11 @@ boto3>=1.34.0
 
 # API Requests
 requests>=2.31.0
+httpx>=0.28.1
 
 # Configuration Management
 python-dotenv>=1.0.0
+pydantic>=2.6.0
 
 # Data Processing & Visualization
 pandas>=2.1.0
